--- a/styling-react/src/App.css
+++ b/styling-react/src/App.css
@@ -1,19 +1,17 @@
+/*CSS Selector 사용*/
+
 .App {
   text-align: center;
 }
 
-.App-logo {
+/* App 안에 들어있는 .logo*/
+.App .logo {
+  animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
-  pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
+/* header 태그 자체에 스타일을 적용할떄, .을 생략한다.*/
+.App header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -24,7 +22,8 @@
   color: white;
 }
 
-.App-link {
+/* a 태그 자체에 적용할떄*/
+.App a {
   color: #61dafb;
 }
 
