--- a/styling-react/src/SassComponent.scss
+++ b/styling-react/src/SassComponent.scss
@@ -1,6 +1,14 @@
 // SassComponent.scss
 @import "utils.scss";
 
+/*
+@import '~library/styles';
+~ 물결문자 사용하여 자동으로 라이브러리 디렉터리를 탐지하여 import
+
+//example library import open-color, include-media
+@import '~include-media/dist/include-media'
+@import '~open-color/open-color'
+*/
 .SassComponent {
   display: flex;
   .box {
